# file-tracker

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  SOUL.md  config.toml  docker-compose.yml
.openclaw/: workspace-state.json
backup/: README.md  backup.py  config.toml  docker-compose.yml  requirements.txt
backup/deploy/: backup-prune.service  backup-prune.timer  backup-run.service  env.example  install.sh
consumer/: README.md  backup.py  cli.py  config.toml  consumer.py  main.py  prune.py  requirements.txt  scheduler.py
consumer/deploy/: backup-consumer.service  backup-run.timer  backup-scheduler.service  install.sh
consumer/rpm/: backup-consumer.spec  build-rpm.sh
deploy/: config.toml  file-tracker.service  install.sh
docs/: PRD.md  TDD.md
include/: common.h  config.h  debouncer.h  kafka_producer.h  log.h  wal.h
memory/: 2026-03-11.md  2026-03-12.md
rpm/: build-rpm.sh  file-tracker.spec
src/: config.cpp  debouncer.cpp  kafka_producer.cpp  main.cpp  wal.cpp
src/bpf/: probe.bpf.c
test/: e2e-edge.sh  e2e.sh
test/vm-centos10/: Vagrantfile
test/vm-centos10/.vagrant/machines/default/libvirt/: action_provision  box_meta  created_networks  id  index_uuid  private_key  synced_folders  vagrant_cwd
test/vm-centos9/: Vagrantfile
test/vm-centos9/.vagrant/machines/default/libvirt/: action_provision  box_meta  id  index_uuid  private_key  synced_folders  vagrant_cwd
